# oh-shell

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
scripts/: cmake-install-centos  cmake-install-ubuntu
src/: main.cpp
src/core/: commander.cpp  commander.h  consoleColor.h
test/: CMakeLists.txt
test/src/: CMakeLists.txt
test/src/core/: testCommander.cpp  testCrypt.cpp
